--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "4.0.x",
     "gulp-svgstore": "^7.0.0",
+    "gulp-uglify": "^3.0.1",
     "gulp-webp": "^3.0.0",
     "posthtml-include": "^1.2.0",
     "stylelint": "9.6.x",
@@ -45,6 +46,8 @@
     "node": "8.12"
   },
   "dependencies": {
-    "del": "^3.0.0"
+    "del": "^3.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "pump": "^3.0.0"
   }
 }
